--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,4 +78,4 @@ jobs:
 
       # ---------- ビルド ----------
       - name: Build workspace
-        run: cargo build --workspace --locked 
+        run: cargo build -p game_core -p game_logic --locked
