--- a/crates/game_runtime/Cargo.toml
+++ b/crates/game_runtime/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2024"
 
 [dependencies]
 bevy = "0.17.3"
-game_core = { path = "../game_core"}
+game_core = { path = "../game_core" }
 game_logic = { path = "../game_logic" }
+
+[build-dependencies]
+build_support = { path = "../build_support" }
